Fixed Notice: Undefined variable: l_rs_noturns in planet_report_ce.php
Fixed Notice: Undefined variable: dest in igb.php 
Fixed Notice: Use of undefined constant name - assumed 'name' in igb.php
Fixed Notice: Undefined offset: 2 in log.php 
Fixed Notice: Undefined index: port_type in traderoute.php
Fixed Notice: Use of undefined constant torp_launchers - assumed 'torp_launchers' in igb.php

TheMightyDude (22 July 2012)
--------------------------------------
Fixed loads of bugs, too many to write down.

TheKabal (21 July 2012)
--------------------------------------
igb_transfers was incorrectly set to use double as the data type. This gives inaccurate results, and should actually match the data type of the transfer (bigint).
For consistency, change all if statements from <> to !=
The constant "null" is lowercase in all non-sql cases
Undefined variable: l_unnamed

TheMightyDude (21 July 2012)
--------------------------------------
Fixed Notice:  Undefined index: team in teams.php
Fixed Notice:  Undefined variable: creator in teams.php
Fixed Notice:  Undefined variable: db_logging in defence_vs_defence.php
Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in defence_vs_defence.php
Fixed Notice:  Undefined variable: db_logging in defence_vs_defence.php
Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in kick_off_planet.php
Fixed Notice:  Use of undefined constant team - assumed 'team' in planet.php

TheMightyDude (20 July 2012)
--------------------------------------
Fixed Notice:  Use of undefined constant quantity - assumed 'quantity' and energy_available - assumed 'energy_available' in sched_degrade.php
Fixed Notice:  Use of undefined constant ship_id - assumed 'ship_id' in sched_degrade.php
Fixed Notice:  Undefined variable: name in mailto2.php
Fixed Notice:  Use of undefined constant ship_id - assumed 'ship_id' in mailto2.php
Fixed Notice:  Undefined variable: l_lssd in port2.php